--- a/elpa.org
+++ b/elpa.org
@@ -1,13 +1,10 @@
 #+title: Org Emacs lisp Package Archive
 #+author: Bastien Guerry
+#+email:     bzg at gnu dot org
 #+date: 2012-09-26
-#+language:  en
-#+startup:   hidestars
-#+options:   H:3 num:nil toc:nil \n:nil @:t ::t |:t ^:t *:t TeX:t author:nil <:t LaTeX:t
-#+keywords:  Org Emacs outline planning note authoring project plain-text LaTeX HTML
+#+setupfile: setup.org
 #+description: Org: an Emacs Mode for Notes, Planning, and Authoring
-#+macro: updown #+HTML: <div class="move"><a onclick="goToByScroll('$1');return false;" href="#">< $1</a> · <a onclick="goToByScroll('$2');return false;" href="#">$2 ></a></div>
-#+html_head:     <link rel="stylesheet" href="org.css" type="text/css" />
+#+include: "./preamble.html" export html
 
 #+begin_export html
 <div id="top"><p><em>Org mode is for keeping notes, maintaining TODO lists, planning
