--- a/changes_older.org
+++ b/changes_older.org
@@ -1,11 +1,9 @@
 #+title:  Org mode for Emacs -- Older (!) Release notes
-#+author: Carsten Dominik
-#+email: carsten at orgmode dot org
-#+startup: hidestars
-#+keywords:  Org Org-mode Emacs outline planning note authoring project plain-text LaTeX HTML
+#+author:    Carsten Dominik
+#+email:     carsten at orgmode dot org
+#+setupfile: setup.org
 #+description: Org Org-mode Emacs Changes ChangeLog release notes archives
-#+options: H:3 num:nil toc:t \n:nil @:t ::t |:t ^:{} *:t TeX:t LaTeX:nil skip:nil
-#+html_head:     <link rel="stylesheet" href="org-changes.css" type="text/css" />
+#+include: "./preamble.html" export html
 
 #+begin_export html
 <div id="top">
