--- a/fr/community.org
+++ b/fr/community.org
@@ -1,12 +1,10 @@
 #+title:     Org mode for Emacs -- Communauté
+#+author:    Carsten Dominik
 #+email:     carsten at orgmode dot org
-#+language:  en
-#+startup:   hidestars
-#+options:   H:3 num:nil toc:nil \n:nil @:t ::t |:t ^:t *:t TeX:t author:nil <:t LaTeX:t
-#+keywords:  Org Emacs outline planning note authoring project plain-text LaTeX HTML
+#+setupfile: ../setup.org
+#+language:  fr
 #+description: Org: an Emacs Mode for Notes, Planning, and Authoring
-#+macro: updown #+HTML: <div class="move"><a onclick="goToByScroll('$1');return false;" href="#">< $1</a> · <a onclick="goToByScroll('$2');return false;" href="#">$2 ></a></div>
-#+html_head:     <link rel="stylesheet" href="https://orgmode.org/org.css" type="text/css" />
+#+include: "../preamble.html" export html
 
 #+begin_export html
 <div id="top"><p><em>Org mode permet de prendre des notes, de maintenir des listes TODO, de
