--- a/fr/talks.org
+++ b/fr/talks.org
@@ -1,13 +1,10 @@
 #+title:     Org mode for Emacs -- Présentations et vidéos
-#+author:    Bastien
+#+author: Bastien Guerry
 #+email:     bzg at gnu dot org
-#+startup:   hidestars
-#+language:  en
-#+options:   H:3 num:nil toc:nil \n:nil @:t ::t |:t ^:t *:t TeX:t author:nil <:t LaTeX:t
-#+keywords:  Org Org-mode Emacs outline planning note authoring project plain-text LaTeX HTML
+#+setupfile: ../setup.org
+#+language:  fr
 #+description: Org Org-mode Emacs Talks about Org-mode
-#+macro: updown #+HTML: <div class="move"><< <a onclick="goToByScroll('$1');return false;" href="#">$1</a><br /><br />>> <a onclick="goToByScroll('$2');return false;" href="#">$2</a></div>
-#+html_head:     <link rel="stylesheet" href="https://orgmode.org/org.css" type="text/css" />
+#+include: "../preamble.html" export html
 
 #+begin_export html
 <div id="top"><p><em>Org mode permet de prendre des notes, de maintenir des listes TODO, de
