--- a/ja/community.org
+++ b/ja/community.org
@@ -1,12 +1,10 @@
 #+title:     Org mode for Emacs -- コミュニティ
 #+email:     carsten at orgmode dot org
+#+setupfile: ../setup.org
 #+language:  ja
-#+startup:   hidestars
-#+options:   H:3 num:nil toc:nil \n:nil ::t |:t ^:t *:t author:nil <:t
 #+keywords:  Org Emacs アウトライン 計画 ノート 編集 プロジェクト プレーンテキスト LaTeX HTML
 #+description: Org: ノート、計画、編集のための Emacs モード
-#+macro: updown #+HTML: <div class="move"><a onclick="goToByScroll('$1');return false;" href="#">< $1</a> · <a onclick="goToByScroll('$2');return false;" href="#">$2 ></a></div>
-#+html_head:  <link rel="stylesheet" href="../org.css" type="text/css" />
+#+include: "../preamble.html" export html
 
 #+begin_export html
 <div id="top"><p><em>Org-mode は、ノートの保存、TODOリストの管理、プロジェクト計画のためのモードです。高速で効率的なプレーンテキストのシステムを使ってファイルを編集します。</em></p></div>
