--- a/ja/index.org
+++ b/ja/index.org
@@ -1,14 +1,11 @@
 #+title:     Org mode for Emacs: あなたの生活をプレーンテキストで
+#+author:    Carsten Dominik
 #+email:     carsten at orgmode dot org
 #+language:  ja
-#+startup:   hidestars
-#+options:   H:3 num:nil toc:nil \n:nil @:t ::t |:t ^:t *:t TeX:t author:nil <:t LaTeX:t
+#+setupfile: ../setup.org
 #+keywords:  Org Emacs アウトライン 計画 ノート 編集 プロジェクト プレーンテキスト LaTeX HTML
 #+description: Org: ノート、計画、編集のための Emacs モード
-#+macro: next #+HTML: <div class="move">> <a onclick="goToByScroll('$1');return false;" href="#">documentation</a></div>
-#+macro: previous #+HTML: <div class="move">< <a onclick="goToByScroll('$1');return false;" href="#">download and install</a></div>
-#+html_head: <link rel="stylesheet" href="../org.css" type="text/css" />
-#+html_head: <meta name="flattr:id" content="8d9x0o">
+#+include: "../preamble.html" export html
 
 #+begin_export html
 <div id="top"><p><em>Org-mode は、ノートの保存、TODOリストの管理、プロジェクト計画、文書編集のためのモードです。高速で効率的なプレーンテキストのシステムを使ってファイルを編集します。<br />
