--- a/survey.org
+++ b/survey.org
@@ -1,14 +1,11 @@
 #+title:       Org mode for Emacs -- Survey Results
 #+author:      Charles Cave
 #+email:       charles dot cave at gmail dot com
-#+startup:     hidestars
-#+language:    en
-#+options:     H:3 num:nil toc:1 \n:nil @:t ::t |:t ^:t -:t f:t *:t TeX:t LaTeX:nil skip:nil d:nil tags:not-in-toc
+#+include: "./preamble.html" export html
 #+link_up:     index.html
 #+link_home:   https://orgmode.org
-#+keywords:    Org Org-mode Emacs outline planning note authoring project plain-text LaTeX HTML
 #+description: Org Org-mode Emacs Survey results
-#+html_head:   <link rel="stylesheet" href="org-changes.css" type="text/css" />
+#+include: "./preamble.html" export html
 
 #+begin_export html
 <div id="top"><p><em>Org mode is for keeping notes, maintaining TODO lists, planning
