--- a/setup.org
+++ b/setup.org
@@ -1,6 +1,7 @@
 #+language:    en
 #+startup:     hidestars
 #+options:     H:3 num:nil toc:nil \n:nil @:t ::t |:t ^:t *:t TeX:t author:nil <:t LaTeX:t
+#+property:    header-args :eval no-export
 #+keywords:    Org Emacs outline planning note authoring project plain-text LaTeX HTML
 #+macro: next #+HTML: <div class="move">> <a onclick="goToByScroll('$1');return false;" href="#">documentation</a></div>
 #+macro: previous #+HTML: <div class="move">< <a onclick="goToByScroll('$1');return false;" href="#">installation</a></div>
