--- a/setup.org
+++ b/setup.org
@@ -3,9 +3,9 @@
 #+options:     H:3 num:nil toc:nil \n:nil @:t ::t |:t ^:t *:t TeX:t author:nil <:t LaTeX:t
 #+property:    header-args :eval no-export
 #+keywords:    Org Emacs outline planning note authoring project plain-text LaTeX HTML
-#+macro: next #+HTML: <div class="move">> <a onclick="goToByScroll('$1');return false;" href="#">documentation</a></div>
-#+macro: previous #+HTML: <div class="move">< <a onclick="goToByScroll('$1');return false;" href="#">installation</a></div>
-#+macro: updown #+HTML: <div class="move"><a onclick="goToByScroll('$1');return false;" href="#">< $1</a> · <a onclick="goToByScroll('$2');return false;" href="#">$2 ></a></div>
+#+macro:       next #+HTML: <div class="move">> <a href="#$1">documentation</a></div>
+#+macro:       previous #+HTML: <div class="move">< <a href="#$1">download and install</a></div>
+#+macro:       updown #+HTML: <div class="move"><a href="#$1">< $1</a> · <a href="#$2">$2 ></a></div>
 #+html_head:   <link rel="stylesheet" href="org.css" type="text/css" />
 #+html_head:   <meta name="flattr:id" content="8d9x0o"> 
 #+html_head:   <meta name="theme-color" content="#77aa99">
