--- a/features.org
+++ b/features.org
@@ -14,6 +14,13 @@
   #content,.outline-2,div.banner {
     margin-left: 0;
   }
+  body {
+    padding: 1em 0;
+  }
+  :root {
+    --body-left: 0 !important;
+    --body-right: 0 !important;
+  }
 </style>
 
 <div class="banner slim"> <p id="a-quote"></p> </div>
